@@ -9,16 +9,16 @@
 
     <name>Data Collector Docker</name>
     <description>Data Collector Docker</description>
-    <url>https://github.com/statisticsnorway/</url>
+    <url>https://github.com/descoped/</url>
     <inceptionYear>2019</inceptionYear>
 
     <properties>
-        <java.version>15</java.version>
+        <java.version>17</java.version>
         <module.build.sourceEncoding>UTF-8</module.build.sourceEncoding>
         <maven.javadoc.skip>true</maven.javadoc.skip>
 
-        <slf4j.version>1.8.0-beta2</slf4j.version>
-        <logback.version>1.3.0-alpha4</logback.version>
+        <slf4j.version>2.0.16</slf4j.version>
+        <logback.version>1.5.8</logback.version>
     </properties>
 
     <licenses>
@@ -32,22 +32,20 @@
         <developer>
             <name>Ove Ranheim</name>
             <email>ove.ranheim@gmail.com</email>
-            <url>https://www.linkedin.com/in/oranheim/</url>
-            <organization>Capra Consulting AS</organization>
-            <organizationUrl>https://www.capraconsulting.no/</organizationUrl>
-        </developer>
-        <developer>
-            <name>Kim Christian Gaarder</name>
-            <email>kim.christian.gaarder@gmail.com</email>
-            <url>https://www.linkedin.com/in/kimchristiangaarder/</url>
-            <organization>Capra Consulting AS</organization>
-            <organizationUrl>https://www.capraconsulting.no/</organizationUrl>
+            <url>https://www.linkedin.com/in/overanheim/</url>
         </developer>
     </developers>
 
+    <contributors>
+        <contributor>
+            <name>Kim Christian Gaarder</name>
+            <url>https://www.linkedin.com/in/kimchristiangaarder/</url>
+        </contributor>
+    </contributors>
+
     <scm>
-        <connection>scm:git:git://github.com/statisticsnorway/data-collector-docker.git</connection>
-        <developerConnection>scm:git:git@github.com:statisticsnorway/data-collector-docker.git</developerConnection>
+        <connection>scm:git:git://github.com/descoped/data-collector-docker.git</connection>
+        <developerConnection>scm:git:git@github.com:descoped/data-collector-docker.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
@@ -62,43 +60,45 @@
         <dependency>
             <groupId>no.ssb.dc</groupId>
             <artifactId>data-collector-api</artifactId>
-            <version>0.1</version>
+            <version>0.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>no.ssb.dc</groupId>
             <artifactId>data-collector-core</artifactId>
-            <version>0.1</version>
+            <version>0.2-SNAPSHOT</version>
         </dependency>
 
+        <!--
         <dependency>
             <groupId>no.ssb.dc</groupId>
             <artifactId>data-collector-javascript-processor</artifactId>
-            <version>0.1</version>
+            <version>0.2-SNAPSHOT</version>
         </dependency>
+        -->
 
         <dependency>
             <groupId>no.ssb.dc</groupId>
             <artifactId>data-collector-server-base</artifactId>
-            <version>0.1</version>
+            <version>0.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>no.ssb.dc</groupId>
             <artifactId>data-collector-connector-content-stream-rawdata</artifactId>
-            <version>0.1</version>
+            <version>0.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>no.ssb.rawdata</groupId>
             <artifactId>rawdata-client-api</artifactId>
-            <version>0.23</version>
+            <version>0.29-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>no.ssb.rawdata</groupId>
             <artifactId>rawdata-client-provider-gcs</artifactId>
-            <version>0.9</version>
+            <version>0.16-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>javax.annotation</groupId>
@@ -110,32 +110,26 @@
         <dependency>
             <groupId>no.ssb.rawdata</groupId>
             <artifactId>rawdata-client-provider-postgres</artifactId>
-            <version>0.8</version>
-        </dependency>
-
-        <dependency>
-            <groupId>no.ssb.rawdata</groupId>
-            <artifactId>rawdata-client-provider-kafka</artifactId>
-            <version>0.3</version>
+            <version>0.13-SNAPSHOT</version>
         </dependency>
 
         <!-- see api module for dapla-secrets declarations -->
         <dependency>
             <groupId>no.ssb.dapla.secrets</groupId>
             <artifactId>dapla-secrets-provider-google-secret-manager</artifactId>
-            <version>0.2.0</version>
+            <version>0.4.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
-            <version>1.24.1</version>
+            <version>2.9.2</version>
         </dependency>
 
         <dependency>
             <groupId>org.lmdbjava</groupId>
             <artifactId>lmdbjava</artifactId>
-            <version>0.8.1</version>
+            <version>0.9.0</version>
 <!--            <exclusions>-->
 <!--                <exclusion>-->
 <!--                    <groupId>com.github.jnr</groupId>-->
@@ -153,7 +147,7 @@
         <dependency>
             <groupId>com.github.jnr</groupId>
             <artifactId>jffi</artifactId>
-            <version>1.2.18</version>
+            <version>1.3.13</version>
             <classifier>native</classifier>
             <scope>test</scope>
         </dependency>
@@ -191,13 +185,13 @@
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
-            <version>6.3</version>
+            <version>8.0</version>
         </dependency>
 
         <dependency>
             <groupId>no.ssb.dc</groupId>
             <artifactId>data-collector-testutils</artifactId>
-            <version>0.1</version>
+            <version>0.2-SNAPSHOT</version>
             <scope>test</scope>
             <exclusions>
                 <!-- caused by gcs -->
@@ -221,7 +215,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>3.0.1</version>
+                        <version>3.3.1</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
@@ -235,7 +229,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>3.1.0</version>
+                        <version>3.10.0</version>
                         <configuration>
                             <encoding>UTF-8</encoding>
                             <additionalOptions>-Xdoclint:none</additionalOptions>
@@ -253,7 +247,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
+                        <version>3.2.6</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -274,37 +268,6 @@
             </build>
         </profile>
         <profile>
-            <id>ssb-bip</id>
-            <repositories>
-                <repository>
-                    <id>ssb-bip-releases</id>
-                    <url>https://nexus.prod-bip-ci.ssb.no/repository/maven-releases/</url>
-                    <snapshots>
-                        <enabled>false</enabled>
-                    </snapshots>
-                </repository>
-                <repository>
-                    <id>ssb-bip-snapshots</id>
-                    <url>https://nexus.prod-bip-ci.ssb.no/repository/maven-snapshots/</url>
-                    <snapshots>
-                        <enabled>true</enabled>
-                    </snapshots>
-                </repository>
-            </repositories>
-            <distributionManagement>
-                <repository>
-                    <id>ssb-bip-releases</id>
-                    <name>SSB Nexus Releases</name>
-                    <url>https://nexus.prod-bip-ci.ssb.no/repository/maven-releases/</url>
-                </repository>
-                <snapshotRepository>
-                    <id>ssb-bip-snapshots</id>
-                    <name>SSB Snapshot Repository</name>
-                    <url>https://nexus.prod-bip-ci.ssb.no/repository/maven-snapshots/</url>
-                </snapshotRepository>
-            </distributionManagement>
-        </profile>
-        <profile>
             <id>coverage</id>
             <properties>
                 <sonar.coverage.jacoco.xmlReportPaths>
@@ -316,12 +279,12 @@
                     <plugin>
                         <groupId>org.sonarsource.scanner.maven</groupId>
                         <artifactId>sonar-maven-plugin</artifactId>
-                        <version>3.7.0.1746</version>
+                        <version>4.0.0.4121</version>
                     </plugin>
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.6</version>
+                        <version>0.8.12</version>
                         <executions>
                             <execution>
                                 <id>prepare-agent</id>
@@ -340,11 +303,10 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.0.0-M5</version>
+                        <version>3.5.0</version>
                         <configuration>
                             <argLine>
-                                ${argLine}
-                                --illegal-access=deny
+                                -XX:+EnableDynamicAgentLoading
                                 -Xmx1500m
                             </argLine>
                         </configuration>
@@ -360,7 +322,7 @@
                     <plugin>
                         <groupId>org.sonatype.plugins</groupId>
                         <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.8</version>
+                        <version>1.7.0</version>
                         <extensions>true</extensions>
                         <configuration>
                             <serverId>ossrh</serverId>
@@ -372,7 +334,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
-                        <version>2.5.3</version>
+                        <version>3.1.1</version>
                         <configuration>
                             <autoVersionSubmodules>true</autoVersionSubmodules>
                             <useReleaseProfile>false</useReleaseProfile>
@@ -389,7 +351,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.13.0</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
@@ -403,7 +365,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.3.1</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
@@ -412,19 +374,19 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.4.2</version>
             </plugin>
 
             <!-- Create a module-info.class file. -->
             <plugin>
                 <groupId>codes.rafael.modulemaker</groupId>
                 <artifactId>modulemaker-maven-plugin</artifactId>
-                <version>1.7</version>
+                <version>1.11</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.ow2.asm</groupId>
                         <artifactId>asm</artifactId>
-                        <version>7.3.1</version>
+                        <version>9.7</version>
                     </dependency>
                 </dependencies>
                 <executions>
@@ -452,12 +414,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>3.5.0</version>
                 <configuration>
                     <argLine>
-                        --illegal-access=deny
-                        --add-opens=java.base/java.nio=lmdbjava
-                        --add-exports=java.base/sun.nio.ch=lmdbjava
+                        -XX:+EnableDynamicAgentLoading
                         --add-opens=no.ssb.dc.server/no.ssb.dc.server.task=ALL-UNNAMED
                         --add-reads no.ssb.dc.content.rawdata=no.ssb.dc.core
                         --add-exports no.ssb.rawdata.postgres/no.ssb.rawdata.provider.postgres=no.ssb.service.provider.api,no.ssb.dc.server
@@ -469,10 +429,31 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>3.0.0-M4</version>
+                <version>3.1.1</version>
                 <configuration>
                     <tagNameFormat>@{project.version}</tagNameFormat>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.5.0</version>
+                <executions>
+                    <execution>
+                        <id>enforce-maven</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
+                                    <version>[3.6.3,4)</version>
+                                </requireMavenVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
